# akasha-rust

./: Cargo.toml  cli.coffee  example_build.json  example_calculation.json  flake.nix  result  saved_uid.txt
src/: icons.rs  main.rs  utils.rs
